name:                gozer
version:             0.1.0.0
synopsis:            Gozer the Gozerian destroys.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Bangert
maintainer:          ben@groovie.org
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG, README.rst
cabal-version:       >=1.10

flag developer
  description: operate in developer mode
  default: False

executable gozer
  default-language: Haskell2010
  main-is:    src/Main.hs
  Build-depends:        base            >= 4.6      && <4.7
                      , aeson           >= 0.7.0.1
                      , bytestring      >= 0.10.0.2
                      , containers      >= 0.5.0
                      , crypto-random   >= 0.0.7
                      , gozer           >= 0.1
                      , http-client-tls >= 0.2
                      , http-client     >= 0.2.0
                      , mtl             >= 2.1
                      , oauthenticated  >= 0.1
                      , pipes           >= 4.1.0
                      , text            >= 0.11.3.1
                      , time            >= 1.4.0.1
  ghc-options: -O2 -Wall -threaded -rtsopts

Library
  default-language: Haskell2010
  Exposed-modules:
    Gozer
    Gozer.Config
    Gozer.Commands
    Gozer.Types

  -- other-modules:
  -- other-extensions:

  ghc-options: -O2 -Wall -threaded -rtsopts
  if flag(developer)
    ghc-prof-options: -auto-all

  Build-depends:        base            >= 4.6      && <4.7
                      , aeson           >= 0.7.0.1
                      , bytestring      >= 0.10.0.2
                      , ConfigFile      >= 1.1
                      , containers      >= 0.5.0
                      , crypto-random   >= 0.0.7
                      , http-client-tls >= 0.2
                      , http-client     >= 0.2.0
                      , mtl             >= 2.1
                      , oauthenticated  >= 0.1
                      , pipes           >= 4.1.0
                      , text            >= 0.11.3.1
                      , time            >= 1.4.0.1

  Hs-source-dirs:
    src