name:                gozer
version:             0.1.3.0
synopsis:            Gozer the Gozerian destroys.
description:         Destroyer of Tweets
license:             BSD3
license-file:        LICENSE
author:              Ben Bangert
maintainer:          ben@groovie.org
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG, README.rst
cabal-version:       >=1.10

flag developer
  description: operate in developer mode
  default: False

executable gozer
  default-language:     Haskell2010
  main-is:              Main.hs

  build-depends:
      base                  >= 4.6      && <4.8
    , authenticate-oauth    >= 1.5
    , bytestring            >= 0.10.0.2
    , conduit               >= 1.1.6
    , ConfigFile            >= 1.1.2
    , containers            >= 0.5.0
    , monad-logger          >= 0.3.6.1
    , lens                  >= 4.2
    , mtl                   >= 2.1
    , old-locale            >= 1.0
    , text                  >= 0.11.3.1
    , time                  >= 1.4.0.1
    , transformers          >= 0.4.1
    , twitter-conduit       >= 0.0.5.2
  ghc-options: -O2 -Wall -threaded -rtsopts
